<resources>
    <string name="app_name">Smart School</string>
    <string name="app_name_new" translatable="false">Ashoka Public School</string>
    <string name="empty"></string>
    <string name="submit_success">Submit Successfully</string>
    <string name="upload">Upload File</string>
    <string name="domainHead">Enter your school url</string>
    <string name="submit">SUBMIT</string>
    <string name="login">Login</string>
    <string name="userNameHint">Username</string>
    <string name="userPasswordHint">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="changeUrl">Change Domain</string>
    <string name="admin">Admin</string>
    <string name="thisMonth">This Month</string>
    <string name="incomplete">Incomplete</string>
    <string name="pendingTask">My Pending Task</string>
    <string name="today">Today\'s</string>
    <string name="calender">Calender</string>
    <string name="taskAndEvents">Task &amp; Events</string>
    <string name="about">About School</string>
    <string name="Logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="fees">Fees</string>
    <string name="timeTable">Time Table</string>
    <string name="liveclasses">Zoom Live Classes</string>
    <string name="livegmeetclasses">Gmeet Live Classes</string>
    <string name="homework">Homework</string>
    <string name="routine">Routine</string>
    <string name="onlineexam">Online Exam</string>
    <string name="examSchedule">Exam Schedule</string>
    <string name="noticeBoard">Notice Board</string>
    <string name="applyleave">Apply Leave</string>
    <string name="downloadCenter">Download Center</string>
    <string name="attendance">Attendance</string>
    <string name="examination">Examination</string>
    <string name="timeLine">Timeline</string>
    <string name="documents">My Documents</string>
    <string name="transportRoute">Transport Route</string>
    <string name="hostelRoom">Hostel Room</string>
    <string name="notification">Notification</string>
    <string name="examresult">Exam Result</string>
    <string name="syllabus_status">Syllabus Status</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="guardian">Guardian</string>
    <string name="admissionNo">Adm. No.</string>
    <string name="RollNo">Roll Number</string>
    <string name="rte">RTE</string>
    <string name="personalDetail">Personal</string>
    <string name="admDate">Admission Date</string>
    <string name="dob">Date Of Birth</string>
    <string name="category">Category</string>
    <string name="mobileNo">Mobile Number</string>
    <string name="caste">Caste</string>
    <string name="religion">Religion</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="currentAdd">Current Address</string>
    <string name="permanentAdd">Permanent Address</string>
    <string name="parentsDetails">Parents</string>
    <string name="fatherName">Father\'s Name</string>
    <string name="fatherPhone">Father\'s Phone</string>
    <string name="fatherOcc">Father\'s Occupation</string>
    <string name="motherName">Father\'s Name</string>
    <string name="motherPhone">Mother\'s Phone</string>
    <string name="motherOcc">Mother\'s Occupation</string>
    <string name="gardianName">Gardian\'s Name</string>
    <string name="gardianEmail">Gardian\'s Email</string>
    <string name="gardianRelation">Gardian\'s Relation</string>
    <string name="gardianPhone">Gardian\'s Phone</string>
    <string name="gardianOcc">Gardian\'s Occupation</string>
    <string name="gardianAdd">Gardian\'s Address</string>
    <string name="otherDetails">Other</string>
    <string name="previousSchool">Previous School</string>
    <string name="nationalIdNo">National ID Number</string>
    <string name="localIdNo">Local ID Number</string>
    <string name="bankAcNo">Bank Account Number</string>
    <string name="bankName">Bank Name</string>
    <string name="ifscCode">IFSC Code</string>
    <string name="vehicleRoute">Vehicle Route</string>
    <string name="bloodGroup">Blood Group</string>
    <string name="studentHouse">Student House</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="asOnDate">As On Date</string>
    <string name="AppliedDate">Apply Date</string>
    <string name="fromDate">From Date</string>
    <string name="fromTime">Time From</string>
    <string name="toTime">Time To</string>
    <string name="applyDateError">The Apply Date field is required </string>
    <string name="fromDateError"> The From Date field is required </string>
    <string name="toDateError"> The To Date field is required </string>
    <string name="reason"> The Reason field is required </string>
    <string name="toDate">To Date</string>
    <string name="editLeave"> Edit Leave </string>
    <string name="editleave">Edit Leave</string>
    <string name="createNewLeave"> Add Leave </string>
    <string name="dueDate">Due Date</string>
    <string name="feescode">Fees Code</string>
    <string name="amt">Amount</string>
    <string name="paidAmt">Paid Amt</string>
    <string name="balanceAmt">Balance Amt</string>
    <string name="feeDetail">Fees Details</string>
    <string name="balance">Balance</string>
    <string name="fine">Fine</string>
    <string name="discount">Discount</string>
    <string name="payFees">Pay Fees</string>
    <string name="discountMsg">Discount of </string>
    <string name="paymentId">Id</string>
    <string name="paymentDate">Date</string>
    <string name="paymentDiscount">Discount</string>
    <string name="paymentFine">Fine</string>
    <string name="paymentPaid">Paid</string>
    <string name="pay">Pay</string>
    <string name="homeworkDate">Homework Date</string>
    <string name="submissionDate">Submission Date</string>
    <string name="evaluationDate">Evaluation Date</string>
    <string name="createdBy">Created By</string>
    <string name="evaluatedBy">Evaluated By</string>
    <string name="homeworkDetails">Homework Details</string>
    <string name="details" translatable="false">Details</string>
    <string name="routineDetails" translatable="false">Routine Details</string>
    <string name="upload_homework">Upload Homework</string>
    <string name="present">Present</string>
    <string name="absent">ABS</string>
    <string name="late">Late</string>
    <string name="halfDay">Half Day</string>
    <string name="holiday">Holiday</string>
    <string name="download">Download</string>
    <string name="assignment">  Assignment </string>
    <string name="studyMaterial"> Study Material</string>
    <string name="syllabus">Syllabus</string>
    <string name="otherDownload">Others</string>
    <string name="startEndTime">Start Time / End Time</string>
    <string name="date">Date</string>
    <string name="max">Max Marks</string>
    <string name="min">Min Marks</string>
    <string name="datefrom">Date From</string>
    <string name="examfrom">Exam From</string>
    <string name="dateto">Date To</string>
    <string name="examto">Exam To</string>
    <string name="totalattempts">Total Attempts</string>
    <string name="classes">Class</string>
    <string name="attempted">Attempted</string>
    <string name="duration">Duration</string>
    <string name="quiz">Quiz</string>
    <string name="question">Question</string>
    <string name="total_ques">Total Questions</string>
    <string name="subjectdetail">Subject Details</string>
    <string name="totalattempt">Total Attempt</string>
    <string name="status">Status</string>
    <string name="passing_per">Passing (%)</string>
    <string name="exam_rank">Exam Rank</string>
    <string name="score_per">Score (%)</string>
    <string name="descriptive_ques">Descriptive Questions</string>
    <string name="answer">Answer</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="total_exam_marks">Total Exam Marks</string>
    <string name="total_scored_marks">Total Scored Marks</string>
    <string name="not_attempt">Not Attempted</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="incorrect">Incorrect</string>
    <string name="startexam">Start Exam</string>
    <string name="onlineexamresult">Online Exam Result</string>
    <string name="your_answer">Your Answer</string>
    <string name="starttime">Start Time</string>
    <string name="teacher_remark">Teacher Remark</string>
    <string name="result">Result</string>
    <string name="division">Division</string>
    <string name="grandTotal">Grand Total</string>
    <string name="percentage">Percentage</string>
    <string name="MarksObtained">Marks Obtained</string>
    <string name="grade">Grade</string>
    <string name="passingMarks">Min Marks</string>
    <string name="gradepoint">Grade Point</string>
    <string name="CreditHours">Credit Hours</string>
    <string name="QualityPoints">Quality Points</string>
    <string name="note">Note</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="time">Time</string>
    <string name="subject">Subject</string>
    <string name="lessons">Lesson</string>
    <string name="Lesson">Lesson Topic</string>
    <string name="lessonplan">Lesson Plan</string>
    <string name="topics">Topic</string>
    <string name="subtopics">Sub Topic</string>
    <string name="presentation">Presentation</string>
    <string name="view">View</string>
    <string name="hostelRoomType">Room Type</string>
    <string name="hostelRoomNo">Room No</string>
    <string name="hostelRoomCost">Room Cost</string>
    <string name="noofbed">Number of bed</string>
    <string name="room">Room</string>
    <string name="rackNo">Rack No </string>
    <string name="quantity">Quantity </string>
    <string name="price">Price </string>
    <string name="createdOn">Added On </string>
    <string name="libraryBookIssued">Library Books</string>
    <string name="booksIssued">Books Issued</string>
    <string name="book">Books</string>
    <string name="library">Library</string>
    <string name="bookNumber">Book No. </string>
    <string name="issueDate">Issue Date </string>
    <string name="duereturnDate">Due Return Date </string>
    <string name="returnDate">Return Date </string>
    <string name="libraryStatus">Status </string>
    <string name="author">Author </string>
    <string name="returned">Returned</string>
    <string name="notReturned">Not Returned</string>
    <string name="routeName">Route Name</string>
    <string name="vehicleNo">Vehicle No.</string>
    <string name="vehicleModel">Vehicle Model</string>
    <string name="made">Made</string>
    <string name="driverName">Driver Name</string>
    <string name="driverLicence">Driver Licence</string>
    <string name="driverContact">Driver Contact</string>
    <string name="task"> New Task </string>
    <string name="createNewTask"> Add Task </string>
    <string name="selectDate"> Task Date </string>
    <string name="taskTitle"> Task Title </string>
    <string name="Reason"> Reason </string>
    <string name="selectDateError"> Please select task date </string>
    <string name="selectTitleError"> Please enter task title </string>
    <string name="iAm">I am</string>
    <string name="student">Student</string>
    <string name="parent">Parent</string>
    <string name="hostel">Hostels</string>
    <string name="online_course">Online Course</string>
    <string name="exams">Exam</string>
    <string name="teachers">Teachers Review</string>
</resources>