<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qdocs.smartschool.BaseActivity"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/actionBarSecondary"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="56dp">

            <ImageView
                android:id="@+id/actionBar_backBtn"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_back"
                android:layout_gravity="start"
                android:padding="19dp"/>

            <TextView
                android:id="@+id/actionBar_title"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/actionBar_backBtn"
                android:layout_marginStart="10dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:textSize="@dimen/heading"
                android:textColor="@color/white"
                android:gravity="center_vertical" />
            <LinearLayout
                android:id="@+id/baseActivity_taskBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:background="@color/transparent"
                android:visibility="gone">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_dashboard_pandingtask"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task"
                    android:textSize="@dimen/primaryText"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </RelativeLayout>

    </FrameLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:elevation="2dp"
        android:background="@color/white"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textHeading"
                android:textStyle="bold"
                android:text="@string/exams"
                android:gravity="left"/>
            <TextView
                android:id="@+id/exam"
                android:textColor="@color/textHeading"
                android:layout_width="0dp"
                android:text="@string/empty"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textHeading"
                android:textStyle="bold"
                android:text="@string/totalattempt"
                android:gravity="left"/>
            <TextView
                android:id="@+id/attempt"
                android:layout_width="0dp"
                android:text="@string/empty"
                android:textColor="@color/textHeading"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textHeading"
                android:textStyle="bold"
                android:text="@string/examfrom"
                android:gravity="left"/>
            <TextView
                android:id="@+id/fromdate"
                android:text="@string/empty"
                android:layout_width="0dp"
                android:textColor="@color/textHeading"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textHeading"
                android:textStyle="bold"
                android:text="@string/examto"
                android:gravity="left"/>
            <TextView
                android:id="@+id/todate"
                android:layout_width="0dp"
                android:text="@string/empty"
                android:textColor="@color/textHeading"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textHeading"
                android:textStyle="bold"
                android:text="@string/duration"
                android:gravity="left"/>
            <TextView
                android:id="@+id/duration"
                android:layout_width="0dp"
                android:textColor="@color/textHeading"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textHeading"
                android:textStyle="bold"
                android:text="@string/passing_per"
                android:gravity="left"/>
            <TextView
                android:id="@+id/percent"
                android:layout_width="0dp"
                android:textColor="@color/textHeading"
                android:text="@string/empty"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textHeading"
                android:textStyle="bold"
                android:text="@string/total_ques"
                android:gravity="left"/>
            <TextView
                android:id="@+id/total_quest"
                android:layout_width="0dp"
                android:text="@string/empty"
                android:textColor="@color/textHeading"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textHeading"
                android:textStyle="bold"
                android:text="Description"
                android:gravity="left"/>
            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:text="@string/empty"
                android:textColor="@color/textHeading"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textHeading"
                android:textStyle="bold"
                android:text="@string/descriptive_ques"
                android:gravity="left"/>
            <TextView
                android:id="@+id/total_descriptive"
                android:layout_width="0dp"
                android:text="@string/empty"
                android:textColor="@color/textHeading"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textHeading"
                android:textStyle="bold"
                android:text="@string/correct"
                android:gravity="left"/>
            <TextView
                android:id="@+id/correct"
                android:layout_width="0dp"
                android:textColor="@color/textHeading"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textHeading"
                android:textStyle="bold"
                android:text="@string/wrong"
                android:gravity="left"/>
            <TextView
                android:id="@+id/wrong"
                android:layout_width="0dp"
                android:text="@string/empty"
                android:textColor="@color/textHeading"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textHeading"
                android:textStyle="bold"
                android:text="@string/not_attempt"
                android:gravity="left"/>
            <TextView
                android:id="@+id/notattempt"
                android:layout_width="0dp"
                android:textColor="@color/textHeading"
                android:text="@string/empty"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textHeading"
                android:textStyle="bold"
                android:text="@string/total_exam_marks"
                android:gravity="left"/>
            <TextView
                android:id="@+id/exam_marks"
                android:layout_width="0dp"
                android:textColor="@color/textHeading"
                android:text="@string/empty"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/neg_marks_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textHeading"
                android:textStyle="bold"
                android:text="Total Negative Marks"
                android:gravity="left"/>
            <TextView
                android:id="@+id/neg_marks"
                android:layout_width="0dp"
                android:textColor="@color/textHeading"
                android:text="@string/empty"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textHeading"
                android:textStyle="bold"
                android:text="@string/total_scored_marks"
                android:gravity="left"/>
            <TextView
                android:id="@+id/scored_marks"
                android:layout_width="0dp"
                android:textColor="@color/textHeading"
                android:text="@string/empty"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textHeading"
                android:textStyle="bold"
                android:text="@string/score_per"
                android:gravity="left"/>
            <TextView
                android:id="@+id/score"
                android:layout_width="0dp"
                android:textColor="@color/textHeading"
                android:text="@string/empty"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/textHeading"
                android:textStyle="bold"
                android:text="@string/exam_rank"
                android:gravity="left"/>
            <TextView
                android:id="@+id/rank"
                android:layout_width="0dp"
                android:textColor="@color/textHeading"
                android:text="@string/empty"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>
    <LinearLayout
        android:id="@+id/nodata_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/no_data" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No Data Found !"
            android:textSize="@dimen/primaryText"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>


</LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>